# side-project

./: client_ImageSocket.py  confidenceIntervel95.py  facedetection.py  picam-imserver.py  server_ImageSocket.py  socketTestClient.py  takePhote_jetson-utils.py  takePicTest-5_sec.py
LICENSE.md/: LICENSE.md
detect_object_respondseTime/: measure_detectObject_respondse_Time.txt  measure_detectObject_respondse_Time_filted.txt  plot_detectObject_respondse_Time.py
edge_cloud_time/: 01-plot_toComposer_timestamp_time.py  measure_CV_JPG.txt  measure_CameraInterval.txt  measure_composer_Jetson_TransferLabelTime.txt  measure_pi-composer_respondedTime.txt  measure_pi_composer_Jetson_repondTime.txt  measure_toComposer_image_time.txt  measure_toComposer_timestamp_time.txt  plot_CameraInterval.py  plot_boxplot_measure_toComposer_timestamp_time.py  plot_cdf_measure_composer_Jetson_TransferLabelTime.py  plot_cdf_measure_pi_composer_Jetson_repondTime.py  plot_cdf_measure_toComposer_image_time.py  plot_cdf_measure_toComposer_timestamp_time.py  plot_measure_CV_JPG.py  plot_measure_composer_Jetson_TransferLabelTime.py  (+3 more)
scheduling/: CMakeLists.txt  JHPWMPCA9685.cpp  JHPWMPCA9685.h  camera_capture.cpp  camera_capture.h  classification.cpp  classification.h  delete_imagefile.cpp  delete_imagefile.h  detect_object.cpp  detect_object.h  joystick.cc  joystick.hh  pi_msg_receiver.cpp  pi_msg_receiver.h  pwmCtl.cpp  pwmCtl.h  scheduling.cpp  scheduling.h  signal_handle.cpp  signal_handle.h  socket_connect.cpp  socket_connect.h  transferor.cpp  transferor.h
scheduling/stb/: stb_image_write.h
(+139 files in other folders)
